# xfbin_cryptor

./: .gitmodules  CMakeLists.txt  NOTE_TO_SELF.md  README.md
src/: main.cpp
